# SimpleInjectionClientBase

./: CMakeLists.txt  README.md  dllMain.cpp
assets/: README.txt
assets/fonts/: sfuibold.h  sfuiregular.h
libraries/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
libraries/jni/: jawt.h  jdwpTransport.h  jni.h  jvm.lib  jvmti.h
libraries/minhook/: hook.cpp
source/me/sleepyfish/: Client.h  ClientMain.h
source/me/sleepyfish/simpleClientBase/interface/: Interface.cpp  Interface.h
source/me/sleepyfish/simpleClientBase/interface/hook/: Keypress.h  SwapBuffers.h
source/me/sleepyfish/simpleClientBase/module/: Manager.h  Module.h
source/me/sleepyfish/simpleClientBase/module/impl/: Auto_Clicker.cpp  Auto_Clicker.h  Module_Client.cpp  Module_Client.h  Player_Esp.cpp  Player_Esp.h  Text_Gui.cpp  Text_Gui.h
source/me/sleepyfish/simpleClientBase/module/setting/: Setting.h
source/me/sleepyfish/simpleClientBase/module/setting/impl/: BoolSetting.h  ColorSetting.h  ValueSetting.h
source/me/sleepyfish/simpleClientBase/sdkm/: SdkmClass.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/: Minecraft.cpp  Minecraft.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/entity/: Entity.cpp  Entity.h  EntityLivingBase.cpp  EntityLivingBase.h  EntityPlayer.cpp  EntityPlayer.h  EntityPlayerSP.cpp  EntityPlayerSP.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/item/: Item.cpp  Item.h  ItemStack.cpp  ItemStack.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/render/: ActiveRenderInfo.cpp  ActiveRenderInfo.h  RenderManager.cpp  RenderManager.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/util/: CTimer.cpp  CTimer.h  MovingObjectPosition.cpp  MovingObjectPosition.h
source/me/sleepyfish/simpleClientBase/sdkm/impl/world/: World.cpp  World.h  WorldClient.cpp  WorldClient.h
source/me/sleepyfish/simpleClientBase/sdkm/java/: FloatBuffer.cpp  FloatBuffer.h  JavaList.cpp  JavaList.h
source/me/sleepyfish/simpleClientBase/utils/: ClickUtils.h  ClientUtils.h  Console.h  Java.h  Mapper.h  MinecraftUtils.h  RenderUtils.h  Utils.h
source/me/sleepyfish/simpleClientBase/utils/unit/: Matrix.h  Vec2.h  Vec3.h  Vec4.h
